    Copyright (C) 2009 Thomas Pummer
    conatct me fake (at) sprossenwanne.at

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.

 */
 
 Short descrition
 + New Function
 * Updated Function
 - Removed Function

0.5
* equals and hash of Feed and News
* link between Feed and News
+ Storing time settings
+ Apptitle and version from manifest
+ Storing properties
+ Language Selection
+ loading config properties
+ Captions loaded by caption classes
+ supporting of languagefiles
* ConfigFrame JCalendar
* ConfigFrame captions encapsulated 
* Feed captions

0.4
+ Config Window GUI
+ Helpwindow
+ TrayMenu
+ Using Hibernate to connect to the Database 
+ Timelogging at Startup
* access configuration modified(FileNotFoundException)
+ multilanguage support
+ access configuration
+ Shutdown
+ Monitor startup
* TrayMenu encapsulated
* TrayIcon encapsulated
+ Prepared Feed Monitor
+ Implemented the Feed
+ ReferenceCollection added and integrated
+ Log4j and HSQL DB integrated
+ TrayRSSSplashScreen - controls the actions on the splash screen
+ Week - manages the days the feed should be monitored on
+ StartUp<startLog> - Log4j Logger added
+ IconChanger - change the Icon of the systemtray

0.3 finished on 04/23/09
+ balloon tips added

0.2
+ only textual output
+ add feeds
+ get feedinfos with rome

0.1
+ trayicon added
+ splashscreen added