@@ -1,3 +1,3 @@
 #Build Number for ANT. Do not edit!
-#Tue Jul 21 23:47:02 CEST 2009
-build.number=34
+#Mon Jul 27 14:29:32 CEST 2009
+build.number=39
